--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -7,3 +7,5 @@ set(COMPONENT_SRCS "main.c"
 set(COMPONENT_ADD_INCLUDEDIRS ".")
 
 register_component()
+
+target_compile_options(${COMPONENT_LIB} PRIVATE "-Wno-format")
